--- a/Caso_01.html
+++ b/Caso_01.html
@@ -75,7 +75,7 @@
 
               <div class="btn_tarjeta_2 margin_bottom">
                 <div class="contenedor_tarjeta_2">
-                  <div style="position:absolute; padding-left: 14px; padding-top: 42px;"> <img src="images/Línea_1.png" class="imagen_hola_3" alt="necesita, ayuda, uno"></div>
+                  <div style="position:absolute; padding-left: 14px; padding-top: 42px;"> <img src="images/Linea_1.png" class="imagen_hola_3" alt="necesita, ayuda, uno"></div>
                     <div class="uno_4"><i class="fas fa-check-circle"></i></div>
                       <div class="uno_2">
                           <h5>Tenemos una respuesta, revisa tu correo</h5>
